@@ -4,6 +4,10 @@ History
 Version 0.6.5 - Unreleased
 --------------------------
 
+- Make ``PloneCallHTMLFormatter`` even more robust by switching to
+  using ``BeautifulSoup`` instead of ``str.find`` to parse the
+  contents. [nouri]
+
 Version 0.6.4 - 2008-09-03
 --------------------------
 
